// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<OptionButton /> UI snapshots checkbox selected, without custom icon 1`] = `
.emotion-9 {
  border-radius: 4px;
  background-color: #FFFFFF;
  border: 1px solid #EDEDF0;
  box-shadow: 0px 8px 24px rgba(52,51,82,0.05);
  cursor: pointer;
  -webkit-transition: box-shadow 200ms;
  transition: box-shadow 200ms;
  padding: 1.5rem;
  margin-bottom: 1rem;
  width: 100%;
  text-align: left;
}

.emotion-9:hover {
  box-shadow: 0px 8px 24px rgba(52,51,82,0.10);
}

.emotion-9:focus {
  outline: none;
  box-shadow: 0px 0px 0px 2px #FFFFFF,0px 0px 0px 4px #332E54;
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row nowrap;
  -ms-flex-flow: row nowrap;
  flex-flow: row nowrap;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-1 {
  border: 1px solid;
  border-color: #332E54;
  background: #FFFFFF;
  width: 32px;
  height: 32px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row nowrap;
  -ms-flex-flow: row nowrap;
  flex-flow: row nowrap;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: all 350ms;
  transition: all 350ms;
  border-radius: 4px;
  background: #332E54;
  border-color: #332E54;
}

.emotion-1 svg {
  opacity: 0;
  -webkit-transition: all 350ms;
  transition: all 350ms;
}

.emotion-1 svg {
  opacity: 1;
  color: #FFFFFF;
  fill: #FFFFFF;
}

.emotion-0 {
  display: block;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  -webkit-transition: color 350ms,-webkit-transform 350ms;
  -webkit-transition: color 350ms,transform 350ms;
  transition: color 350ms,transform 350ms;
}

.emotion-5 {
  margin-left: 1rem;
}

.emotion-3 {
  color: #524D6E;
  line-height: 1.5;
}

<button
  className="emotion-9 emotion-10"
  onClick={[Function]}
  role="checkbox"
  type="button"
>
  <div
    className="emotion-7 emotion-8"
  >
    <div
      className="emotion-1 emotion-2"
      selected={true}
    >
      <svg
        className="emotion-0"
        fill="none"
        height={16}
        viewBox="0 0 16 16"
        width={16}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M14.96 2l-9.7 9.42L.88 7.1 0 7.99l5.26 5.18L15.83 2.9l-.87-.9z"
          fill="currentColor"
        />
      </svg>
    </div>
    <div
      className="emotion-5 emotion-6"
    >
      <div
        className="emotion-3 emotion-4"
      >
        checkbox text
      </div>
    </div>
  </div>
</button>
`;

exports[`<OptionButton /> UI snapshots radio unselected, with icon node prop 1`] = `
.emotion-9 {
  border-radius: 4px;
  background-color: #FFFFFF;
  border: 1px solid #EDEDF0;
  box-shadow: 0px 8px 24px rgba(52,51,82,0.05);
  cursor: pointer;
  -webkit-transition: box-shadow 200ms;
  transition: box-shadow 200ms;
  padding: 1.5rem;
  margin-bottom: 1rem;
  width: 100%;
  text-align: left;
}

.emotion-9:hover {
  box-shadow: 0px 8px 24px rgba(52,51,82,0.10);
}

.emotion-9:focus {
  outline: none;
  box-shadow: 0px 0px 0px 2px #FFFFFF,0px 0px 0px 4px #332E54;
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row nowrap;
  -ms-flex-flow: row nowrap;
  flex-flow: row nowrap;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0 {
  display: block;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  -webkit-transition: color 350ms,-webkit-transform 350ms;
  -webkit-transition: color 350ms,transform 350ms;
  transition: color 350ms,transform 350ms;
}

.emotion-5 {
  margin-left: 1rem;
}

.emotion-3 {
  color: #524D6E;
  line-height: 1.5;
}

.emotion-1 {
  border: 1px solid;
  border-color: #332E54;
  background: #FFFFFF;
  width: 32px;
  height: 32px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row nowrap;
  -ms-flex-flow: row nowrap;
  flex-flow: row nowrap;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: all 350ms;
  transition: all 350ms;
  border-radius: 50%;
  width: 48px;
  height: 48px;
}

.emotion-1 svg {
  opacity: 0;
  -webkit-transition: all 350ms;
  transition: all 350ms;
}

.emotion-1 svg {
  opacity: 1;
  color: #332E54;
  fill: #332E54;
}

<button
  className="emotion-9 emotion-10"
  onClick={[Function]}
  role="radio"
  type="button"
>
  <div
    className="emotion-7 emotion-8"
  >
    <div
      className="emotion-1 emotion-2"
      selected={false}
    >
      <svg
        className="emotion-0"
        fill="none"
        height={16}
        viewBox="0 0 48 48"
        width={16}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clipRule="evenodd"
          d="M21.993 10.023c0 1.123.896 2.033 2.012 2.033s2.02-.92 2.02-2.033A2.03 2.03 0 0024.006 8c-1.107 0-2.012.9-2.012 2.023zm1.203 0a.81.81 0 01.809-.813c.452 0 .818.358.818.813a.826.826 0 01-.818.823.818.818 0 01-.809-.823zm-1.203 27.944c0 1.123.896 2.033 2.012 2.033s2.02-.92 2.02-2.033a2.03 2.03 0 00-2.02-2.023c-1.107 0-2.012.9-2.012 2.023zm1.203 0a.81.81 0 01.809-.813c.452 0 .818.368.818.813a.826.826 0 01-.818.823.818.818 0 01-.809-.823zm14.793-12.04a2.027 2.027 0 01-2.021-2.033 2.016 2.016 0 114.032 0c0 1.113-.895 2.032-2.011 2.032zm0-2.846a.818.818 0 100 1.635.812.812 0 00.808-.822.803.803 0 00-.808-.813zM8 23.893c0 1.122.905 2.032 2.021 2.032 1.116 0 2.021-.92 2.021-2.032a2.025 2.025 0 00-2.02-2.023c-1.117 0-2.022.9-2.022 2.023zm1.203 0a.818.818 0 111.635.009.818.818 0 01-1.635-.01z"
          fill="currentColor"
          fillRule="evenodd"
        />
      </svg>
    </div>
    <div
      className="emotion-5 emotion-6"
    >
      <div
        className="emotion-3 emotion-4"
      >
        radio text
      </div>
    </div>
  </div>
</button>
`;
